--- a/art-quiz/src/components/Volume/Volume.css
+++ b/art-quiz/src/components/Volume/Volume.css
@@ -12,8 +12,8 @@
 .volume::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 8px;
-  height: 8px;
+  width: 0;
+  height: 0;
   background-color: #ffbca2;
   box-shadow: -500px 0 0 500px #ffbca2;
 }
